<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity"
    android:background="@drawable/ic_main_background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/profileToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/primary_blue"
        app:titleTextColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/profileToolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingStart="40dp"
        android:paddingEnd="40dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="20dp"
                android:gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profileImageIv"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_user"
                    android:contentDescription="@string/content_description"
                    app:civ_border_width="1dp"
                    app:civ_border_color="@color/secondary_text_color"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/secondary_text_color">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/profileNameEt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_name"
                        android:textSize="18sp"
                        android:textColor="@color/primary_text_color"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/secondary_text_color"
                    android:focusable="false"
                    android:focusableInTouchMode="false">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/profileEmailEt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_email"
                        android:textSize="18sp"
                        android:textColor="@color/primary_text_color"
                        android:focusable="false"
                        android:focusableInTouchMode="false" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/secondary_text_color">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/profileMobileEt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_mobile"
                        android:textSize="18sp"
                        android:textColor="@color/primary_text_color"/>

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/updateBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/colored_gradient_circular_shape"
                    android:text="@string/profile_update_btn"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>