<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateBoardActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/boardToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/primary_blue"
        app:titleTextColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/boardToolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/ic_main_background"
        android:padding="40dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="20dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/boardImageIv"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_board"
                    app:civ_border_width="1dp"
                    app:civ_border_color="@color/secondary_text_color"
                    android:contentDescription="@string/content_description"
                    android:layout_marginTop="10dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/secondary_text_color"
                    android:layout_marginTop="40dp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/boardNameEt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_board"
                        android:textSize="18sp"
                        android:textColor="@color/primary_text_color"/>

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/createBoardBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/colored_gradient_circular_shape"
                    android:text="@string/create_board_btn"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>