<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/addTaskListTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/task_grey"
            android:gravity="center"
            android:padding="12dp"
            android:textSize="18sp"
            android:visibility="gone"
            tools:visibility="visible"
            android:textColor="@color/primary_blue"
            android:text="@string/add_task_list_tv"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/addTaskListNameCv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:elevation="5dp"
            android:visibility="gone"
            app:cardCornerRadius="5dp"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/cancelTaskListNameBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/content_description"
                    android:padding="10dp"
                    android:src="@drawable/ic_cancel"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/taskListNameEt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="List Name"
                    android:hint="@string/hint_list_name"
                    android:inputType="text"/>

                <ImageButton
                    android:id="@+id/doneTaskListNameBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/content_description"
                    android:padding="10dp"
                    android:src="@drawable/ic_done"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/taskItemLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/task_grey"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <LinearLayout
                android:id="@+id/titleViewLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/task_light_grey"
                android:elevation="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="visible"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/taskListTitleTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:textColor="@color/primary_text_color"
                    android:textSize="16sp"
                    tools:text="Title"/>

                <ImageButton
                    android:id="@+id/editTaskListTitleBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/content_description"
                    android:padding="10dp"
                    android:src="@drawable/ic_edit"/>

                <ImageButton
                    android:id="@+id/deleteTaskListTitleBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/content_description"
                    android:padding="10dp"
                    android:src="@drawable/ic_delete_red"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider_grey"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/taskListNameCv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:elevation="5dp"
                android:visibility="gone"
                app:cardCornerRadius="5dp"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/cancelTaskTitleBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/content_description"
                        android:padding="10dp"
                        android:src="@drawable/ic_cancel"/>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/taskTitleEt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints="List Name"
                        android:hint="@string/hint_list_name"
                        android:inputType="text"/>

                    <ImageButton
                        android:id="@+id/doneTaskTitleBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/content_description"
                        android:padding="10dp"
                        android:src="@drawable/ic_done"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cardListRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/addCardCv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:elevation="5dp"
                android:visibility="gone"
                app:cardCornerRadius="5dp"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/cancelCardNameBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/content_description"
                        android:padding="10dp"
                        android:src="@drawable/ic_cancel"/>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/cardNameEt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints="Card Name"
                        android:hint="@string/hint_card_name"
                        android:inputType="text"/>

                    <ImageButton
                        android:id="@+id/doneCardNameBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/content_description"
                        android:padding="10dp"
                        android:src="@drawable/ic_done"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/addCardTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/task_grey"
                android:gravity="center"
                android:padding="12dp"
                android:textSize="18sp"
                android:visibility="visible"
                android:elevation="10dp"
                tools:visibility="visible"
                android:textColor="@color/primary_blue"
                android:text="@string/add_card_tv"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>